Fixed minor bug on composicion links.

--- a/project/templates/includes/_navbar.html
+++ b/project/templates/includes/_navbar.html
@@ -11,7 +11,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/searchhome">Página Principal</a></li>
+            <li><a href="/searchhome">Página principal</a></li>
             <li><a href="http://poeticasonora.mx/Proyecto">Sobre el proyecto</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
