--- a/project/templates/includes/_searchbar.html
+++ b/project/templates/includes/_searchbar.html
@@ -10,37 +10,37 @@
                           <div class="form-group">
                             <label for="filtrado">Filtrado por</label>
                             <select name="filtrado" onclick="noPropagate(event);" id="no-click" class="form-control">
-                                <option value="all" selected>Todas las categorias</option>
+                                <option value="all" selected>Todas las categorías</option>
                                 <option value="autor">Autor</option>
                                 <option value="colectivo">Colectivo</option>
                                 <option value="composicion">Composición</option>
                                 <option value="serie">Serie</option>
                                 <option value="tema">Tema</option>
-                                <option value="genero">Género musicale</option>
+                                <option value="genero">Género musical</option>
                                 <option value="instrumento">Instrumento</option>
                                 <option value="idioma">Idioma</option>
                                 <option value="interp">Intepretado por</option>
                                 <option value="lugar">Lugar</option>
                                 <option value="usuario">Usuario</option>
-                                <option value="gender">Género de personas</option>
+                                <option value="gender">Géneros de personas</option>
                             </select>
                           </div>
                           <div class="form-group">
                               <div class="container">
                                   <div class="row text-center">
                                       <div class="col-sm-12 col-md-6">
-                                          <label for="ano-comienzo">Ano Comenzio</label>
+                                          <label for="ano-comienzo">Ano Desde</label>
                                           <input name="ano-comienzo" class="form-control" type="text" placeholder="Principio de los tiempos" />
                                       </div>
                                       <div class="col-sm-12 col-md-6">
-                                          <label for="ano-finale">Ano Finale</label>
+                                          <label for="ano-finale">Ano Hasta</label>
                                           <input name="ano-finale" class="form-control" type="text" placeholder="Ahora" />
                                       </div>
                                   </div>
                               </div>
                           </div>
                           <div class="form-group">
-                            <label for="comentario">Buscar los comentarios</label>
+                            <label for="comentario">Buscar palabras clave</label>
                             <input name="comentario" class="form-control" type="text" />
                           </div>
                           <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
