--- a/project/templates/includes/_sidebar.html
+++ b/project/templates/includes/_sidebar.html
@@ -121,7 +121,7 @@
                     <div class="card-header" role="tab" id="ciudad-heading">
                         <li class="nav-header header-padding">
                             <a data-toggle="collapse" data-parent="#accordion" href="#ciudad-collapse" aria-expanded="true" aria-controls="ciudad-collapse">
-                                Ciudads
+                                Ciudades
                             </a>
                         </li>
                     </div>
@@ -167,7 +167,7 @@
                     <div class="card-header" role="tab" id="pais-heading">
                         <li class="nav-header header-padding">
                             <a data-toggle="collapse" data-parent="#accordion" href="#pais-collapse" aria-expanded="true" aria-controls="pais-collapse">
-                                País
+                                Países
                             </a>
                         </li>
                     </div>
