--- a/project/templates/macros.html
+++ b/project/templates/macros.html
@@ -108,10 +108,10 @@
                     {% endif %}
                     <thead>
                         <tr>
-                            <th>Nom</th>
+                            <th>Nombre</th>
                             <th>Origen</th>
-                            <th>Comienzo</th>
-                            <th>Finale</th>
+                            <th>Nacimiento</th>
+                            <th>Muerte</th>
                         {% if 'mod' in result and result.mod == True %}
                             <th>Usuario</th>
                         {% endif %}
