--- a/project/templates/user/login.html
+++ b/project/templates/user/login.html
@@ -5,7 +5,7 @@
     <br>
     <br>
 <div class="center-block jumbotron" style="width:70%;">
-    <h2>Iniciar Sesión </h2>
+    <h2>Iniciar sesión </h2>
     <br>
     <br>
     {% from "includes/_formhelpers.html" import render_field %}
@@ -23,7 +23,7 @@
         </div>
       <button class="btn btn-success" type="submit">Iniciar sesión</button>
       <br><br>
-      <p>Necesidad de  <a class="underline" href="{{ url_for('user.register') }}">Registrarse</a>?</p>
+      <p>¿Necesita <a class="underline" href="{{ url_for('user.register') }}">registrarse</a>?</p>
     </form>
 </div>
 {% endblock %}
