--- a/project/static/css/global.css
+++ b/project/static/css/global.css
@@ -15,6 +15,16 @@
     padding-right: 15px;
 }
 
+
+.fade-in {
+  margin: 25px 10px;
+  width: 256px;
+  height: 256px;
+  background: #141414;
+  box-shadow: 0 0 15px 10px #141414;
+}
+
+
 .header-padding{
     padding-bottom: 5px;
     padding-top: 5px;
