--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -38,6 +38,7 @@
         <link href="{{ url_for('static', filename='css/searchbar.css') }}" id="" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/dynamic-form.css') }}" id="" rel="stylesheet" type="text/css" />
         <link href="{{ url_for('static', filename='css/sidebar.css') }}" id="" rel="stylesheet" type="text/css" />
+        <link href="{{ url_for('static', filename='css/fade.css') }}" id="" rel="stylesheet" type="text/css" />
         {% block css %}{% endblock %}
     </head>
     <body data-bodyview="index" class="default">
