--- a/project/templates/poner/album.html
+++ b/project/templates/poner/album.html
@@ -9,7 +9,7 @@
     <h2>Añadir una album</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
-    <form id="add-entity-form" method='POST' action="" enctype="multipart/form-data">
+    <form id="add-entity-form" method='POST' action="">
         {{ form.csrf_token }}
         <br>
         <div class="center-block skinny">
@@ -22,9 +22,7 @@
             <div class="form-group">
                 {{render_field(form.serie_id, class ="form-control")}}
             </div>
-            <div class="form-group">
-                {{render_field(form.archivo, class ="form-control")}}
-            </div>
+
             <br>
              <div>
                 <button class="btn btn-success" type="submit">Enviar</button>
