--- a/project/templates/poner/serie.html
+++ b/project/templates/poner/serie.html
@@ -9,7 +9,7 @@
     <h2>Añadir una serie</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
-    <form id="add-entity-form" method='POST' action="">
+    <form id="add-entity-form" method='POST' action="" enctype="multipart/form-data">
         {{ form.csrf_token }}
         <br>
         <div class="center-block skinny">
@@ -21,6 +21,9 @@
             </div>
             <div class="form-group">
                 {{render_field(form.giro, class ="form-control")}}
+            </div>
+            <div class="form-group">
+                {{render_field(form.archivo, class ="form-control")}}
             </div>
             <div class="form-group">
                 {{render_field(form.coment_serie, class ="form-control")}}
