--- a/project/templates/macros.html
+++ b/project/templates/macros.html
@@ -614,6 +614,8 @@
             </div>
         </div>
         <br>
+        <div>{{ result.0.coment_pista_son }}</div>
+        <br>
         <table class="table">
             <thead>
                 <tr>
