--- a/project/templates/includes/_searchbar.html
+++ b/project/templates/includes/_searchbar.html
@@ -22,7 +22,7 @@
                                 <option value="interp">Intepretado por</option>
                                 <option value="lugar">Lugar</option>
                                 <option value="usuario">Usuario</option>
-                                <option value="gender">Géneros de personas</option>
+                                <option value="gender">Género</option>
                             </select>
                           </div>
                           <div class="form-group">
