--- a/project/templates/includes/_sidebar.html
+++ b/project/templates/includes/_sidebar.html
@@ -98,7 +98,7 @@
                     <div class="card-header" role="tab" id="genders-heading">
                         <li class="nav-header header-padding">
                             <a data-toggle="collapse" data-parent="#accordion" href="#genders-collapse" aria-expanded="true" aria-controls="genders-collapse">
-                                Géneros de personas
+                                Géneros
                             </a>
                         </li>
                     </div>
