--- a/project/templates/macros.html
+++ b/project/templates/macros.html
@@ -175,10 +175,10 @@
                     <table class="table table-striped mod-tables">
                     <thead>
                         <tr>
-                            <th>Nom</th>
+                            <th>Nombr</th>
                             <th>Origen</th>
                             <th>Comienzo</th>
-                            <th>Finale</th>
+                            <th>Final</th>
                         {% if 'mod' in result and result.mod == True %}
                             <th>Usuario</th>
                         {% endif %}
@@ -237,7 +237,7 @@
             <div class="card-header" role="tab" id="pista-heading">
                 <h3 class="mb-0">
                     <a data-toggle="collapse" data-parent="#accordion" href="#pista-collapse" aria-expanded="true" aria-controls="pista-collapse">
-                        Pista_son
+                        Pista sonora
                     </a>
                 </h3>
             </div>
@@ -321,8 +321,8 @@
                     <thead>
                         <tr>
                             <th>Título</th>
-                            <th>Fecha publication</th>
-                            <th>Autor(s)</th>
+                            <th>Fecha publicación</th>
+                            <th>Autor(es)</th>
                         {% if 'mod' in result and result.mod == True %}
                             <th>Usuario</th>
                         {% endif %}
