--- a/project/templates/poner/album.html
+++ b/project/templates/poner/album.html
@@ -6,7 +6,7 @@
 
 <div>
     <br>
-    <h2>Añadir una album</h2>
+    <h2>Añadir un álbum</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
     <form id="add-entity-form" method='POST' action="">
