--- a/project/templates/poner/grupo.html
+++ b/project/templates/poner/grupo.html
@@ -9,7 +9,7 @@
     <br>
     <h2>Actualizar una organización</h2>
     <br>
-    <p>Por favor, rellene el siguiente formulario.</p>
+    <p>Por favor, llene el siguiente formulario. Agregue información sobre...</p>
     <form id="add-entity-form" method='POST' action="">
         {{ form.csrf_token }}
         <br>
