--- a/project/templates/user/info.html
+++ b/project/templates/user/info.html
@@ -3,7 +3,7 @@
 {% block body %}
 
     {% from "includes/_formhelpers.html" import render_field, nom_pers, origen, dyn_grupo %}
-  <h1>Información Opcional</h1>
+  <h1>Información opcional</h1>
     <br>
     <br>
     <div id="toggle-div" style="display: none;" name="{{ session['is_person']|safe }}"></div>
