--- a/project/templates/user/mod.html
+++ b/project/templates/user/mod.html
@@ -7,10 +7,10 @@
 
 <div id="tabs" class="container" style="width: 80%;">
 
-    <h3>El panel Mod</h3>
+    <h3>El panel del moderador</h3>
     <a class="right underline" href="{{ url_for('user.perfil') }}">Volver al perfil</a>
     <p> Desde aquí puede cambiar el estado de
-        cualquier inserto y ponerlo a disposición del público, o retractarlo.<br>
+        cualquier recurso y ponerlo a disposición del público, o removerlo.<br>
         También tiene la posibilidad de editar cualquiera de las
         entradas actuales en la base de datos.</p>
     <ul class="nav nav-tabs nav-justified">
