--- a/project/templates/includes/_navbar.html
+++ b/project/templates/includes/_navbar.html
@@ -17,7 +17,7 @@
           <ul class="nav navbar-nav navbar-right">
             {% if session['logged_in'] and session['confirmed'] %}
                 <li><a href="{{ url_for('user.perfil') }}">Perfil</a></li>
-                <li><a href="{{ url_for('user.logout') }}">Cerrar Sesión</a></li>
+                <li><a href="{{ url_for('user.logout') }}">Cerrar sesión</a></li>
             {% elif session['logged_in'] %}
                 <li><a href="{{ url_for('user.unconfirmed') }}">Confirmado</a></li>
                 <li><a href="{{ url_for('user.logout') }}">Cerrar Sesión</a></li>
