--- a/project/templates/poner/part.html
+++ b/project/templates/poner/part.html
@@ -7,7 +7,8 @@
 
 <div>
     <br>
-    <h2>Actualizar una organización</h2>
+    <h2 class="individual">Actualizar un individuo</h2>
+    <h2 class="organization">Actualizar una organización</h2>
     <br>
     <p>Por favor, rellene el siguiente formulario.</p>
     <form id="add-entity-form" method='POST' action="">
@@ -54,7 +55,7 @@
             {{ fecha(form) }}
             {{ origen(form, 'Origen') }}
             <div class="row individual">
-                <h3>Muer</h3>
+                <h3>Muerte</h3>
                 <div class="form-group col-md-4">
                   {{render_field(form.ciudad_muer, class ="form-control")}}
                 </div>
